<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music_library"
            android:icon="@mipmap/ic_library_music"
            android:title="@string/title_drawer_music_library" />
        <item
            android:id="@+id/nav_music_favorite"
            android:icon="@mipmap/ic_favorite_dark"
            android:title="@string/title_drawer_music_favorite" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/btn_notification_settings"
            android:title="@string/title_drawer_setting" />
        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@mipmap/ic_help_and_feedback"
            android:title="@string/title_drawer_help_and_feedback" />
    </group>

</menu>