<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRelativeOnerow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPlaying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_playing_song"
            android:text="@string/number_default" />

        <TextView
            android:id="@+id/tvTitleSongOneRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_toLeftOf="@id/ivShowPopup"
            android:layout_toRightOf="@id/ivPlaying"
            android:maxLines="1"
            android:text="@string/default_name_song"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDurationSongOneRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitleSongOneRow"
            android:layout_alignStart="@id/tvTitleSongOneRow"
            android:text="@string/default_time_song"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivShowPopup"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_show_menu_top_media"
            android:scaleType="centerInside" />

    </RelativeLayout>
</RelativeLayout>